# Deaf_Helper

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml  requirements.txt
output_steps/: output_step_1.json  output_step_10.json  output_step_100.json  output_step_1000.json  output_step_1001.json  output_step_1002.json  output_step_1003.json  output_step_1004.json  output_step_1005.json  output_step_1006.json  output_step_1007.json  output_step_1008.json  output_step_1009.json  output_step_101.json  output_step_1010.json  output_step_1011.json  output_step_1012.json  output_step_1013.json  output_step_1014.json  output_step_1015.json  output_step_1016.json  output_step_1017.json  output_step_1018.json  output_step_1019.json  output_step_102.json  output_step_1020.json  output_step_1021.json  output_step_1022.json  output_step_1023.json  output_step_1024.json  output_step_1025.json  output_step_1026.json  output_step_1027.json  output_step_1028.json  output_step_1029.json  output_step_103.json  output_step_1030.json  output_step_1031.json  output_step_1032.json  output_step_1033.json  (+2014 more)
src/: __init__.py  agent.py  fron.html  front.html  main.py  memory_manager.py  models.py  scene_analyzer.py  scene_change_detector.py  service_decision.py  video_processor.py  vllm_client.py
src/active_service/: __init__.py  client_test.py  main.py  run_streaming_realtime.py  server_test.py  ws_client.py  ws_frontend_server.py  ws_server.py  ws_server_remote.py
src/transcription/: __init__.py  audio_processor.py  main.py  (+8 more)
tests/: __init__.py  test_memory_manager.py
(+1955 files in other folders)
